<resources>
    <string name="app_name">Mugip App</string>
    <string name="forgot_password">비밀번호 찾기</string>
    <string name="sign_in">Mugip과 함께하기</string>
    <string name="auto_login">자동 로그인</string>
    <string name="login_title">Mugip 로그인</string>
    <string name="login">로그인</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="find_account">아이디 찾기 | 비밀번호 찾기</string>
    <string name="naver_login">Naver</string>
    <string name="google_login">Google</string>
    <string name="title_activity_login_email">LoginActivityEmail</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>